@@ -68,6 +68,7 @@ typedef struct source
   int		    triple_count;	/* # triples associated to it */
 #ifdef WITH_MD5
   md5_byte_t 	    digest[16];		/* MD5 digest */
+  unsigned	    md5 : 1;		/* do/don't record MD5 */
 #endif
 } source;  
 
